--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <!-- Self added colors -->
+    <color name="lifted_gray_blue">#cfeafa</color>
+    <color name="buttonLabel">#FFFFFF</color>
 </resources>
