--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.skydoves.transformationlayout.TransformationLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_marginVertical="8dp"
+    android:background="@color/dark_green"
+    android:padding="8dp"
+    app:transformation_duration="550">
 
     <TextView
         android:id="@+id/textView"
-        style="@style/word_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/teal_700" />
-</LinearLayout>
+        android:gravity="center"
+        android:text="@string/hint_plant"
+        android:textColor="@color/white" />
+</com.skydoves.transformationlayout.TransformationLayout>
