--- a/app/src/main/res/layout/activity_new_plant.xml
+++ b/app/src/main/res/layout/activity_new_plant.xml
@@ -1,27 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?android:attr/colorBackground"
+    android:orientation="vertical"
+    android:padding="16dp">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="16dp"
+        android:text="@string/new_plant"
+        android:textSize="26sp" />
 
     <EditText
         android:id="@+id/edit_plant"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="@dimen/min_height"
+        android:layout_margin="8dp"
         android:fontFamily="sans-serif-light"
         android:hint="@string/hint_plant"
         android:inputType="textAutoComplete"
-        android:layout_margin="@dimen/big_padding"
+        android:minHeight="@dimen/min_height"
         android:textSize="18sp" />
 
     <Button
         android:id="@+id/button_save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/lifted_gray_blue"
-        android:text="@string/button_save"
-        android:layout_margin="@dimen/big_padding"
-        android:textColor="@color/buttonLabel" />
+        android:layout_margin="8dp"
+        android:text="@string/button_save" />
 
 </LinearLayout>
