--- a/app/src/main/res/layout/activity_new_plant.xml
+++ b/app/src/main/res/layout/activity_new_plant.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:attr/colorBackground"
@@ -14,16 +15,54 @@
         android:text="@string/new_plant"
         android:textSize="26sp" />
 
-    <EditText
-        android:id="@+id/edit_plant"
+
+    <com.github.florent37.materialtextfield.MaterialTextField
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:fontFamily="sans-serif-light"
-        android:hint="@string/hint_plant"
-        android:inputType="textAutoComplete"
-        android:minHeight="@dimen/min_height"
-        android:textSize="18sp" />
+        app:mtf_animationDuration="100"
+        app:mtf_cardCollapsedHeight="4dp"
+        app:mtf_image="@drawable/ic_plant"
+        app:mtf_labelColor="@color/white"
+        app:mtf_backgroundColor="@color/light_gray"
+        app:mtf_openKeyboardOnFocus="true">
+
+        <EditText
+            android:id="@+id/edit_plant"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_plant"
+            android:textSize="18sp" />
+
+    </com.github.florent37.materialtextfield.MaterialTextField>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|start"
+            android:text="@string/days_between_watering"
+            android:textSize="18sp"/>
+
+        <com.shawnlin.numberpicker.NumberPicker
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_vertical|end"
+            app:np_orientation="horizontal"
+            app:np_textColor="@color/light_gray"
+            app:np_selectedTextColor="@color/white"
+            app:np_dividerColor="@color/light_gray"
+            app:np_dividerType="underline"
+            app:np_itemSpacing="15dp"
+            app:np_min="1"
+            app:np_max="90"
+            />
+    </FrameLayout>
+
 
     <Button
         android:id="@+id/button_save"
