--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="light_gray">#FF5A595B</color>
     <color name="white">#FFFFFFFF</color>
     <!-- Self added colors -->
     <color name="lifted_gray_blue">#cfeafa</color>
