Add a nice light theme and a rough adding screen

--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/InfoScreen"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    android:background="?android:attr/colorBackground"
-    tools:context=".ui.InfoActivity">
+    android:background="?colorPrimaryVariant"
+    android:orientation="vertical"
+    tools:context=".ui.InfoActivity" >
 
     <ImageView
         android:layout_width="match_parent"
@@ -16,12 +16,12 @@
         android:contentDescription="@string/main_photo"
         android:src="@drawable/zz" />
 
-
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/plant_nick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:fontFamily="@font/merriweather_bold"
         android:paddingTop="16dp"
         android:text="@string/hint_plant"
         android:textSize="26sp" />
@@ -32,9 +32,6 @@
         android:layout_gravity="center_horizontal"
         android:text="ZZ Plant"
         android:textSize="18sp" />
-
-
-
 
 
 </LinearLayout>
