--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.IPlant" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
+        <item name="android:background">#1E2B19</item>
         <item name="colorPrimary">#004D40</item>
         <item name="colorPrimaryVariant">#00796B</item>
         <item name="colorOnPrimary">@color/white</item>
@@ -13,4 +14,15 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="ActivityHeader">
+        <item name="android:fontFamily">@font/merriweather_bold</item>
+        <item name="android:textSize">36sp</item>
+        <item name="android:textColor">@color/text_green</item>
+    </style>
+
+    <style name="InfoScreen">
+        <item name="android:background">@color/cucumber</item>
+    </style>
+
 </resources>
