--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,17 +1,27 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.IPlant" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.IPlant" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:colorButtonNormal">@color/pink</item>
+        <item name="android:textColor">@color/text_green</item>
+        <item name="colorBackgroundFloating">@color/coral</item>
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/dark_green</item>
-        <item name="colorPrimaryVariant">@color/light_green</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/cucumber</item>
+        <item name="colorOnPrimary">@color/text_gray</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/pink</item>
+        <item name="colorSecondaryVariant">@color/coral</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/cucumber</item>
+        <item name="android:windowLightStatusBar">true</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="ActivityHeader">
+        <item name="android:fontFamily">@font/merriweather_bold</item>
+        <item name="android:textSize">36sp</item>
+        <item name="android:textColor">@color/text_green</item>
     </style>
 
     <style name="word_title">
