--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -12,8 +12,8 @@
         android:layout_gravity="center"
         android:layout_margin="2dp"
         android:elevation="0dp"
-        app:cardBackgroundColor="?colorPrimaryVariant"
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="10dp"
+        app:cardBackgroundColor="@color/cucumber">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -25,7 +25,9 @@
                 android:layout_height="100dp"
                 android:layout_gravity="start"
                 android:adjustViewBounds="true"
-                android:src="@drawable/zz" />
+                android:layout_alignParentStart="true"
+                android:src="@drawable/zz"
+                android:contentDescription="@string/most_recent_photo" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
