Implement editing functionality

--- a/app/src/main/res/layout/activity_edit_plant.xml
+++ b/app/src/main/res/layout/activity_edit_plant.xml
@@ -16,6 +16,7 @@
         android:text="@string/new_plant" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/edit_plant_layout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
