Add watering/fertilizing functionalities

--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -126,7 +126,7 @@
                         android:layout_alignStart="@id/button_fertilize"
                         android:layout_alignEnd="@id/button_fertilize"
                         android:gravity="center"
-                        android:text="Last fertilized:\n%s" />
+                        android:text="@string/last_fertilized" />
 
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
