--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.skydoves.transformationlayout.TransformationLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:layout_marginTop="16dp"
-    app:transformation_duration="550">
+    android:layout_marginTop="16dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -71,4 +70,4 @@
 
     </androidx.cardview.widget.CardView>
 
-</com.skydoves.transformationlayout.TransformationLayout>
+</FrameLayout>
