--- a/app/src/main/res/menu/menu_plant.xml
+++ b/app/src/main/res/menu/menu_plant.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
         android:id="@+id/menu_edit"
         android:title="@string/edit_plant" />
+
     <item
         android:id="@+id/menu_gallery"
         android:title="@string/view_plants_history" />
+
+    <item
+        android:id="@+id/menu_export"
+        android:title="@string/export" />
+
+    <item
+        android:id="@+id/menu_share"
+        android:title="@string/share_on_twitter" />
+
 </menu>
